// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1500}
      createdAt={0}
      description="rent"
      id="1"
      key="1"
      note="rent for may"
    />
    <ExpenseListItem
      amount={5}
      createdAt={-345600000}
      description="cofee"
      id="2"
      key="2"
      note="starbucks"
    />
    <ExpenseListItem
      amount={5034}
      createdAt={345600000}
      description="credit card"
      id="3"
      key="3"
      note="citi bank"
    />
  </div>
</div>
`;
